# ChangeLog for app-editors/emacs-cvs
# Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  20 Mar 2007; Christian Faulhammer <opfer@gentoo.org>
  emacs-cvs-22.0.96.ebuild, emacs-cvs-22.0.9999-r8.ebuild,
  emacs-cvs-23.0.0-r4.ebuild:
  SLOT behaviour should now work

  20 Mar 2007; Christian Faulhammer <opfer@gentoo.org>
  +emacs-cvs-22.0.96.ebuild, +emacs-cvs-22.0.9999-r8.ebuild,
  +emacs-cvs-23.0.0-r4.ebuild:
  version bump to 22.0.96 and newer slotting settings...let's test it

  20 Mar 2007; Christian Faulhammer <opfer@gentoo.org>
  -emacs-cvs-22.0.95-r2.ebuild, -emacs-cvs-22.0.9999-r6.ebuild,
  -emacs-cvs-23.0.0-r2.ebuild:
  clean up

  19 Mar 2007; Christian Faulhammer <opfer@gentoo.org>
  emacs-cvs-22.0.95-r3.ebuild, emacs-cvs-22.0.9999-r7.ebuild,
  emacs-cvs-23.0.0-r3.ebuild:
  fix a whitespace problem in elog message

  19 Mar 2007; Christian Faulhammer <opfer@gentoo.org>
  emacs-cvs-22.0.95-r3.ebuild, emacs-cvs-22.0.9999-r7.ebuild,
  emacs-cvs-23.0.0-r3.ebuild:
  remove colliding files between slots, see bug 169033

  19 Mar 2007; Christian Faulhammer <opfer@gentoo.org>
  emacs-cvs-22.0.95-r3.ebuild, emacs-cvs-22.0.9999-r7.ebuild,
  emacs-cvs-23.0.0-r3.ebuild:
  correct dependency on the latest eselect module version

  19 Mar 2007; Christian Faulhammer <opfer@gentoo.org>
  +emacs-cvs-22.0.95-r3.ebuild, +emacs-cvs-22.0.9999-r7.ebuild,
  +emacs-cvs-23.0.0-r3.ebuild:
  Don't install emacs executable twice; Suffix changed from .emacs- to -emacs-
  for better compatibility with XEmacs.

  18 Mar 2007; Christian Faulhammer <opfer@gentoo.org>
  emacs-cvs-22.0.95-r2.ebuild, emacs-cvs-22.0.9999-r6.ebuild,
  emacs-cvs-23.0.0-r2.ebuild:
  removing a superfluos space

  16 Mar 2007; Christian Faulhammer <opfer@gentoo.org>
  emacs-cvs-22.0.95-r2.ebuild, emacs-cvs-22.0.9999-r6.ebuild,
  emacs-cvs-23.0.0-r2.ebuild:
  correct hesiod inclusion

  16 Mar 2007; Ulrich Mueller <ulm@kph.uni-mainz.de>
  emacs-cvs-22.0.95-r2.ebuild: