@@ -16,30 +16,30 @@ EBUILD emacs-cvs-22.0.95-r3.ebuild 6605 RMD160 309fdf7aae95829cfde36986a540e0ae9
 MD5 521b468c7ac6d2709a8b6d4a58d21844 emacs-cvs-22.0.95-r3.ebuild 6605
 RMD160 309fdf7aae95829cfde36986a540e0ae9b2f97dc emacs-cvs-22.0.95-r3.ebuild 6605
 SHA256 bfdc5c5907402a33be1c9f3bed4390f6697df314312574e946a5e31c14cd6a50 emacs-cvs-22.0.95-r3.ebuild 6605
-EBUILD emacs-cvs-22.0.96.ebuild 6654 RMD160 560d6544e3159d4a483fba5845862d7858d3d317 SHA1 30ea9f1eebfca312b47e042c3d916c37cff8d38c SHA256 e430a2e3782391e2723fb18576644786ce69dbf1686db1ac732026781f54e237
-MD5 4f9d8584711c420d4a611b3f656fcbbb emacs-cvs-22.0.96.ebuild 6654
-RMD160 560d6544e3159d4a483fba5845862d7858d3d317 emacs-cvs-22.0.96.ebuild 6654
-SHA256 e430a2e3782391e2723fb18576644786ce69dbf1686db1ac732026781f54e237 emacs-cvs-22.0.96.ebuild 6654
+EBUILD emacs-cvs-22.0.96.ebuild 6661 RMD160 513aef0c4167efb5b266007a842e7d1037403d22 SHA1 cb3745d0059460908987d1220eb03a599a1f6766 SHA256 20509adb88c93c11d4e5bc67476fa3063389c544d96414d2dca2c4a90db34d8f
+MD5 6b5905cef646fdd4943c0a9525f9cf46 emacs-cvs-22.0.96.ebuild 6661
+RMD160 513aef0c4167efb5b266007a842e7d1037403d22 emacs-cvs-22.0.96.ebuild 6661
+SHA256 20509adb88c93c11d4e5bc67476fa3063389c544d96414d2dca2c4a90db34d8f emacs-cvs-22.0.96.ebuild 6661
 EBUILD emacs-cvs-22.0.9999-r7.ebuild 6670 RMD160 e843977065abd6b3603f3c9a746ac45b8f6b00e9 SHA1 4885e79514fec166341abac320b571fa30057d9b SHA256 b893bddb387bac5f93f1e7869a5cd25ceefe4a48e93df45aad07ac3ad1688ec3
 MD5 eae681a69040f7823d8288d63783777c emacs-cvs-22.0.9999-r7.ebuild 6670
 RMD160 e843977065abd6b3603f3c9a746ac45b8f6b00e9 emacs-cvs-22.0.9999-r7.ebuild 6670
 SHA256 b893bddb387bac5f93f1e7869a5cd25ceefe4a48e93df45aad07ac3ad1688ec3 emacs-cvs-22.0.9999-r7.ebuild 6670
-EBUILD emacs-cvs-22.0.9999-r8.ebuild 6719 RMD160 a85ced7a95ad765af9aa4e9f5936ca8c7a157525 SHA1 26174978363785cd574057ab00b2f3cde02d7650 SHA256 39c180ffdffae6dd6b628b04e3fa45c1358bce445361d6961a71b4786127de79
-MD5 231dcaf1f238a2461d15f85c5d87a88f emacs-cvs-22.0.9999-r8.ebuild 6719
-RMD160 a85ced7a95ad765af9aa4e9f5936ca8c7a157525 emacs-cvs-22.0.9999-r8.ebuild 6719
-SHA256 39c180ffdffae6dd6b628b04e3fa45c1358bce445361d6961a71b4786127de79 emacs-cvs-22.0.9999-r8.ebuild 6719
+EBUILD emacs-cvs-22.0.9999-r8.ebuild 6726 RMD160 16152655c65394b7fd4fa0bc712b5873dcb33c5a SHA1 699dbfe0e15bee58b4e52d01e89620785091e426 SHA256 946836831555ea7297641e249c08be8bd1ed36af9951975d4d9516be5ee8d53e
+MD5 50ba2a744bfadde1fa798397527f1ef8 emacs-cvs-22.0.9999-r8.ebuild 6726
+RMD160 16152655c65394b7fd4fa0bc712b5873dcb33c5a emacs-cvs-22.0.9999-r8.ebuild 6726
+SHA256 946836831555ea7297641e249c08be8bd1ed36af9951975d4d9516be5ee8d53e emacs-cvs-22.0.9999-r8.ebuild 6726
 EBUILD emacs-cvs-23.0.0-r3.ebuild 6927 RMD160 39d611a99a184cc3ce0a0e9c88567ba207a3b282 SHA1 2ea5c161c24680fd88f58bf85897122a9bdb40e3 SHA256 f158337dedd3410e9b2dc37b35db5656c153fd587a5ab6758889ebe9ddc8c50c
 MD5 3da6e9699bbade5decf3b71a4427a2e8 emacs-cvs-23.0.0-r3.ebuild 6927
 RMD160 39d611a99a184cc3ce0a0e9c88567ba207a3b282 emacs-cvs-23.0.0-r3.ebuild 6927
 SHA256 f158337dedd3410e9b2dc37b35db5656c153fd587a5ab6758889ebe9ddc8c50c emacs-cvs-23.0.0-r3.ebuild 6927
-EBUILD emacs-cvs-23.0.0-r4.ebuild 6976 RMD160 8ee51f83676d9a2f6c70202d21b4b2bad49c6e66 SHA1 667848efccb21e20ab8567c0374a85b6b2c20055 SHA256 316b16dcd80bb9fa61040c6ac097884802688c20dfb475bae392fef0b1abe583
-MD5 b61e19e20043f6e0a1132f00c3f559c2 emacs-cvs-23.0.0-r4.ebuild 6976
-RMD160 8ee51f83676d9a2f6c70202d21b4b2bad49c6e66 emacs-cvs-23.0.0-r4.ebuild 6976
-SHA256 316b16dcd80bb9fa61040c6ac097884802688c20dfb475bae392fef0b1abe583 emacs-cvs-23.0.0-r4.ebuild 6976
-MISC ChangeLog 5619 RMD160 64a35ea46131fe21da265b0ed583d315dec282dd SHA1 a7d612019e9f0723902c1caa6ddfe0e74bd6410b SHA256 4aa2d77bde7e2c3035a93ec137464e3d696e17bcf19c6e97d5c3294e4b72556f
-MD5 dc38aac05983efbf8244bf2200a96fc2 ChangeLog 5619
-RMD160 64a35ea46131fe21da265b0ed583d315dec282dd ChangeLog 5619
-SHA256 4aa2d77bde7e2c3035a93ec137464e3d696e17bcf19c6e97d5c3294e4b72556f ChangeLog 5619
+EBUILD emacs-cvs-23.0.0-r4.ebuild 6984 RMD160 64464b1a65dc9dd3da49e665315d1881e3680d52 SHA1 aec7578818d16980d0782780b4f4d7f17ed07377 SHA256 4fb2fa1b6d447d6cff67d96059b09089a16a15a9911e738cfe72502e39b33e6b
+MD5 f6b00837ab3c81ea6cf8e009b88c671c emacs-cvs-23.0.0-r4.ebuild 6984
+RMD160 64464b1a65dc9dd3da49e665315d1881e3680d52 emacs-cvs-23.0.0-r4.ebuild 6984
+SHA256 4fb2fa1b6d447d6cff67d96059b09089a16a15a9911e738cfe72502e39b33e6b emacs-cvs-23.0.0-r4.ebuild 6984
+MISC ChangeLog 5806 RMD160 5d12364612a0f730092316d421bacaf8d1c93b49 SHA1 62503ff2374c9c511688a32ca3f7a43585d57aee SHA256 c1dedd33a8dedaa0ac5b1601b1c105a0a57149b3c43af9b8ccf9fe38d4e77131
+MD5 7fa0889336b22c19c6a9e249f1181ac5 ChangeLog 5806
+RMD160 5d12364612a0f730092316d421bacaf8d1c93b49 ChangeLog 5806
+SHA256 c1dedd33a8dedaa0ac5b1601b1c105a0a57149b3c43af9b8ccf9fe38d4e77131 ChangeLog 5806
 MISC metadata.xml 158 RMD160 415d172437ca754d24fc5ab186ba8e77934d96e4 SHA1 61f6eff9729cd87a725c2a70c81aca4270a17fc4 SHA256 1393bdef3a74343fdb40a112c7096a1af16f67e7a43413250de28dfe73810eab
 MD5 fcd33d07e4ee719b01157946734f4fe8 metadata.xml 158
 RMD160 415d172437ca754d24fc5ab186ba8e77934d96e4 metadata.xml 158
